# qtsystems

./: .gitignore  TODO  configure  configure.bat  qt5systems.spec  qtsystemkit.pro  qtsystems.pro  sync.profile
config.tests/blkid/: blkid.pro  main.cpp
config.tests/bluez/: main.cpp
config.tests/contextkit/: contextkit.pro  main.cpp
config.tests/evdev/: evdev.pro  main.cpp
config.tests/failed/: failed.pro
config.tests/gconf/: gconf.pro  main.cpp
config.tests/jsondb/: jsondb.pro  main.cpp
config.tests/libsysinfo/: libsysinfo.pro  main.cpp
config.tests/mir/: main.cpp  mir.pro
config.tests/mtcore/: main.cpp  mtcore.pro
config.tests/mtlib/: main.cpp  mtlib.pro
config.tests/udev/: main.cpp  udev.pro
config.tests/wayland/: main.cpp  wayland.pro
config.tests/x11/: main.cpp  x11.pro
examples/: examples.pro
examples/publishsubscribe/: publishsubscribe.pro
examples/serviceframework/: serviceframework.pro
examples/systeminfo/: stub.h  systeminfo.pro
modules/: qt_publishsubscribe.pri  qt_serviceframework.pri  qt_systeminfo.pri
src/: src.pri  src.pro
src/imports/: imports.pro  qimportbase.pri
src/publishsubscribe/: contextkitlayer.cpp  contextkitlayer_p.h  gconfitem.cpp  gconfitem_p.h  gconflayer.cpp  gconflayer_p.h  jsondblayer.cpp  jsondblayer_p.h  publishsubscribe.pro  qpublishsubscribe_p.h  qpublishsubscribeglobal.h  qsystemreadwritelock_p.h  qsystemreadwritelock_win.cpp  qvaluespace.cpp  qvaluespace.h  qvaluespace_p.h  qvaluespacemanager.cpp  (+8 more)
tests/: tests.pro
tests/auto/cmake/test_modules/: CMakeLists.txt  main.cpp
(+591 files in other folders)
